# rayleigh_analysis

./: .gitignore  .gitmodules  README.md  eval_mesh.sh  explorer_run.sh  model.py  network_depth.sh  pyproject.toml  run.sh  run_crawl.sh
data_preprocessing/: cache_matrix_exponentials.py  homiphily.py  homophily.py  long_range_graph_benchmark.py  longe_range_graph_benchmark.py  lrgb_small.py  toy_diffusion.py
data_preprocessing/weatherbench/: construct_earth_mesh.py  download_climatology.py  download_eras5.py
evaluation/: basic_learning_curve_diagnostics.py  plotting_params.py  rayleigh_oversmoothing.py
experiments/unitary_or_bust/: taylor_series_truncation.py  taylor_series_truncation_lrgb.py
flops/: flop_counter.py
metrics/: accuracy.py  heat_flow.py  homophily.py  rayleigh.py
model/: complex_global_mean_pool.py  edge_aggregator.py  model.py  model_factory.py  predictor.py
model/graph_rewiring/: README.md  models.py
model/lie_operations/: README.md  model.py
model/mlp/: README.md
model/standard_message_passing/: README.md
model_checkpoints/: Cahn-Hilliard_EGNN_h32_model.pt  Cahn-Hilliard_EGNN_seed1_model.pt  Heat_EGNN_seed1_model.pt  Wave_EGNN_h32_model.pt  Wave_EGNN_seed1_model.pt
notebooks/: 1-truncation-plots.ipynb  bootstrap.py
output/architecture_LieUni_truncation_16_Nov10_01-38-24/: best_model.pt  best_model_gnn.pt  final_model.pt  final_model_gnn.pt  test_losses.npy  train_losses.npy  val_losses.npy
output/architecture_LieUni_truncation_16_Nov10_13-46-49/: best_model.pt  best_model_gnn.pt  final_model.pt  final_model_gnn.pt  test_losses.npy  train_losses.npy  val_losses.npy
output/architecture_LieUni_truncation_1_Nov10_01-17-32/: best_model.pt  best_model_gnn.pt  final_model.pt  final_model_gnn.pt  test_losses.npy  train_losses.npy  val_losses.npy
output/architecture_LieUni_truncation_1_Nov10_01-24-51/: best_model.pt  best_model_gnn.pt  final_model.pt  final_model_gnn.pt  test_losses.npy  train_losses.npy  val_losses.npy
output/architecture_LieUni_truncation_1_Nov10_13-11-12/: best_model.pt  best_model_gnn.pt  final_model.pt  final_model_gnn.pt  test_losses.npy  train_losses.npy  val_losses.npy
output/architecture_LieUni_truncation_1_Nov10_13-32-40/: best_model.pt  best_model_gnn.pt  final_model.pt  final_model_gnn.pt  test_losses.npy  train_losses.npy  val_losses.npy
output/architecture_LieUni_truncation_2_Nov10_01-17-49/: best_model.pt  best_model_gnn.pt  final_model.pt  final_model_gnn.pt  test_losses.npy  train_losses.npy  val_losses.npy
output/architecture_LieUni_truncation_2_Nov10_01-27-28/: best_model.pt  best_model_gnn.pt  final_model.pt  final_model_gnn.pt  test_losses.npy  train_losses.npy  val_losses.npy
output/architecture_LieUni_truncation_2_Nov10_13-11-32/: best_model.pt  best_model_gnn.pt  final_model.pt  final_model_gnn.pt  test_losses.npy  train_losses.npy  val_losses.npy
output/architecture_LieUni_truncation_2_Nov10_13-35-22/: best_model.pt  best_model_gnn.pt  final_model.pt  final_model_gnn.pt  test_losses.npy  train_losses.npy  val_losses.npy
output/architecture_LieUni_truncation_32_Nov10_01-45-27/: best_model.pt  best_model_gnn.pt  final_model.pt  final_model_gnn.pt  test_losses.npy  train_losses.npy  val_losses.npy
output/architecture_LieUni_truncation_32_Nov10_13-54-00/: best_model.pt  best_model_gnn.pt  final_model.pt  final_model_gnn.pt  test_losses.npy  train_losses.npy  val_losses.npy
output/architecture_LieUni_truncation_4_Nov10_01-30-19/: best_model.pt  best_model_gnn.pt  final_model.pt  final_model_gnn.pt  test_losses.npy  train_losses.npy  val_losses.npy
output/architecture_LieUni_truncation_4_Nov10_13-38-26/: best_model.pt  best_model_gnn.pt  final_model.pt  final_model_gnn.pt  test_losses.npy  train_losses.npy  val_losses.npy
output/architecture_LieUni_truncation_8_Nov10_01-33-46/: best_model.pt  best_model_gnn.pt  final_model.pt  final_model_gnn.pt  test_losses.npy  train_losses.npy  val_losses.npy
parsers/: parser_base.py  parser_lrgb.py  parser_toy.py
shell_scripts/: eval_mesh.sh  mesh.sh  network_depth.sh  peptide.sh
shell_scripts/flops/: explorer_flops.sh  flops.sh
slurm/: 2628680.err  2628788.err  2628791.err  2628791.out  2635089.err  2635089.out  2635090.err  2635090.out  2644474.err  2645719.err  2645720.err
test/: complex_equivariant_test.py  rayleigh_test.py  unitary_mpnn_test.py
toy_heat_diffusion/: aggregate.py  eval.py  gcn.sh  heat_data.py  models.py  pyg_toy.py  train.py  unitary.sh  writesh.py
train/: README.md  train.py
truncation/: taylor_series_truncation_heat.py  taylor_series_truncation_lrgb.py
wandb/: latest-run
weatherbench/: dataset.py  download_climatology.py  download_era5_data.py  download_eras5.py  experiment.py  preprocess_data.py
(+570 files in other folders)
